sc/Module_sc.mk
@@ -62,6 +62,7 @@ $(eval $(call gb_Module_add_check_targets,sc,\
 	CppunitTest_sc_core \
 	CppunitTest_sc_dataprovider \
 	CppunitTest_sc_cache_test \
+	CppunitTest_sc_parallelism \
     CppunitTest_sc_shapetest \
 ))
 endif
