sc/qa/unit/ucalc_parallelism.cxx
@@ -16,6 +16,9 @@
 using namespace css;
 using namespace css::uno;
 
+// test-suite suitable for creating documents to test parallelism in
+// with access to internal unexported symbols
+
 class ScParallelismTest : public ScUcalcTestBase
 {
 public:
